Change Http.superPool to Http.cachedHostConnectionPool. One http connection pool is created to one server.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,4 +1,22 @@
 akka {
   event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
   loglevel = "DEBUG"
+
+  http {
+    host-connection-pool {
+      max-connections = 30
+      max-retries = 5
+      max-open-requests = 64
+      pipelining-limit = 1
+    }
+  }
+}
+balancer{
+  interface = "127.0.0.1"
+  port = 3535
+}
+
+local-servers{
+  interface = "127.0.0.1"
+  ports = [10002, 10003]
 }
